src/objects/LaborMultiplier__c.object
<CustomObject>
    <fields>
        <fullName>EndDateActive__c</fullName>
        <label>End Date Active</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LaborMultiplierID__c</fullName>
        <externalId>true</externalId>
        <label>Labor Multiplier ID</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LaborMultiplier__c</fullName>
        <label>Labor Multiplier</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProjectTask</label>
        <referenceTo>pse__Project_Task__c</referenceTo>
        <relationshipLabel>Labor Multipliers</relationshipLabel>
        <relationshipName>Labor_Multipliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Labor Multipliers</relationshipLabel>
        <relationshipName>Labor_Multipliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RecordVersionNumber__c</fullName>
        <label>Record Version Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDateActive__c</fullName>
        <label>Start Date Active</label>
        <type>Date</type>
    </fields>
    <label>Labor Multiplier</label>
    <nameField>
        <label>Labor Multiplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Labor Multipliers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>